update css in an attempt to stop project container overflowing header and footer

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -3,10 +3,16 @@ body {
     /* padding-top: 80px; */
 }
 
+.header {
+    z-index: 10;
+}
+
+
 /* override standard navbar to fix at top of window and give transparent background */
 .navbar {
     position: fixed;
     width: 100%;
+
     background: url("../../assets/images/transparency.png");
     background-color: transparent !important;
     background-size: cover;
